# renthouse-tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml  project_spec.md
.github/workflows/: deploy-demo.yml
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 188a30d8e27e_replace_commute_departure_time_with_.py  1cd9c2831ad0_add_commute_departure_time_to_users.py  a1b2c3d4e5f6_add_size_ping_to_houses.py  a2c4e6f8h0j2_add_temp_sunshine_to_climate.py  b3d5f7h9j1l3_drop_districts_climate.py  c2d4f6a8b0e1_add_current_residence_to_users.py  d3e5g7i9k1m3_add_neighborhood_to_houses.py  e4f6h8j0l2n4_add_current_neighborhood_to_users.py  e5b138149cdb_init.py  f3a7e1b2c9d0_add_real_price_tables.py  f5g7i9k1m3o5_drop_neighborhood_columns.py  g6h8j0l2n4p6_rename_departure_to_arrival_times.py
backend/app/: auth.py  config.py  crawler_config.py  database.py  main.py  scheduler.py
backend/app/models/: __init__.py  commute.py  house.py  isochrone.py  real_price.py  user.py
backend/app/routers/: auth.py  climate.py  commute.py  crawler.py  houses.py  isochrone.py  preferences.py  real_price.py
backend/app/services/: air_quality.py  climate.py  commute.py  forecast.py  geocoding.py  isochrone.py  listing_provider.py  real_price.py  scraper.py
frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: Logo.tsx  Navbar.tsx
frontend/src/demo/: mockData.ts
scripts/: crawl_and_push.py
(+8 files in other folders)
